Config JMS. closes #8

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 logging.level.guru=debug
 server.port=8083
 sfg.brewery.beer-service-host=http://localhost:8080
+#default for local artemis image
+spring.artemis.user=admin
+spring.artemis.password=admin
