--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ sfg.brewery.beer-service-host=http://localhost:8080
 #default for local artemis image
 spring.artemis.user=admin
 spring.artemis.password=admin
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
