--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.artemis.user=admin
 spring.artemis.password=admin
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
+
