Configure Eureka Client. Closes #37

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
+spring.application.name=beer-order-service
 logging.level.guru=debug
 server.port=8083
 sfg.brewery.beer-service-host=http://localhost:8080
 #default for local artemis image
 spring.artemis.user=admin
 spring.artemis.password=admin
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 
