--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.artemis.user=admin
 spring.artemis.password=admin
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
+logging.level.guru.sfg=debug
+spring.zipkin.baseUrl=http://localhost:9411/
 
