--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.artemis.password=admin
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 logging.level.guru.sfg=debug
-spring.zipkin.baseUrl=http://localhost:9411/
+spring.zipkin.enabled=false
 
