--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 logging.level.guru.sfg=debug
 spring.zipkin.enabled=false
-
+#Spring Data hangs when not set under spring boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
